--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "bard-ai": "^2.0.3",
+    "chromium": "^3.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "openai": "^4.12.4",
-    "puppeteer": "^21.3.8",
+    "puppeteer": "^21.4.1",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.2",
     "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8"
