--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/public/(.*)",
-      "dest": "/public/$1"
+      "src": "/api/(.*)",
+      "dest": "api/$1"
     },
     {
-      "src": "./(.*)",
-      "dest": "./"
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
